--- a/aboutMe.yml
+++ b/aboutMe.yml
@@ -1,8 +1,8 @@
-name: Ben Doherty
-studentNumber: z1234567
-gitHubUsername: notionparallax
-stackoverflow: http://stackoverflow.com/users/1835727/ben
-mediumUsername: notionparallax
-unswEmail: noIdea@unsw.edu.au
-realEmailFirstBit: ben  # this avoids spam
-realEmailOtherBit: @notionparallax.co.uk
+name: Penny Talalak
+studentNumber: z5062257
+gitHubUsername: pennypangCODE
+stackoverflow: http://stackoverflow.com/users/7650438/penny-pang
+mediumUsername: @pennypang.t
+unswEmail: z5062257@ad.unsw.edu.au
+realEmailFirstBit: pennypang.t  # this avoids spam
+realEmailOtherBit: @gmail.com
