--- a/aboutMe.yml
+++ b/aboutMe.yml
@@ -1,8 +1,8 @@
-name: Ben Doherty
-studentNumber: z1234567
-gitHubUsername: notionparallax
-stackoverflow: http://stackoverflow.com/users/1835727/ben
-mediumUsername: notionparallax
-unswEmail: noIdea@unsw.edu.au
-realEmailFirstBit: ben  # this avoids spam
-realEmailOtherBit: @notionparallax.co.uk
+name: Danielle Bisazza
+studentNumber: z5116896
+gitHubUsername: dbisazza
+stackoverflow: https://stackoverflow.com/users/7650432/dbisazza
+mediumUsername: dbisazza
+unswEmail: z5116896@student.unsw.edu.au
+realEmailFirstBit: danielle.bisazza  # this avoids spam
+realEmailOtherBit: @gmail.com
