--- a/aboutMe.yml
+++ b/aboutMe.yml
@@ -1,8 +1,8 @@
-name: Ben Doherty
-studentNumber: z1234567
-gitHubUsername: notionparallax
-stackoverflow: http://stackoverflow.com/users/1835727/ben
-mediumUsername: notionparallax
-unswEmail: noIdea@unsw.edu.au
-realEmailFirstBit: ben  # this avoids spam
-realEmailOtherBit: @notionparallax.co.uk
+name: Nick Lucchese
+studentNumber: z5164700
+gitHubUsername: nbluc
+stackoverflow: https://stackoverflow.com/users/story/7650511#
+mediumUsername: nblucchese
+unswEmail: z5164700@ad.unsw.edu.au
+realEmailFirstBit: nblucchese
+realEmailOtherBit: @gmail.com
