--- a/aboutMe.yml
+++ b/aboutMe.yml
@@ -3,6 +3,6 @@ studentNumber: z5164700
 gitHubUsername: nbluc
 stackoverflow: https://stackoverflow.com/users/story/7650511#
 mediumUsername: nblucchese
-unswEmail: z5164700@ad.unsw.edu.au
+unswEmail: n.lucchese@student.unsw.edu.au
 realEmailFirstBit: nblucchese
 realEmailOtherBit: @gmail.com
