Changed Medium username

--- a/aboutMe.yml
+++ b/aboutMe.yml
@@ -2,7 +2,7 @@ name: Danielle Bisazza
 studentNumber: z5116896
 gitHubUsername: dbisazza
 stackoverflow: https://stackoverflow.com/users/7650432/dbisazza
-mediumUsername: dbisazza
+mediumUsername: danielle.bisazza
 unswEmail: z5116896@student.unsw.edu.au
 realEmailFirstBit: danielle.bisazza  # this avoids spam
 realEmailOtherBit: @gmail.com
